# wsl2p-remote

./: .gitignore  MyFunctions.ps1  README.md  pyproject.toml  setup.py  wsl2remote.yml
src/: client_side.py  server_side.py  utils.py
wsl2p_remote/: __main__.py  client_side.py  install.py  main.py  server_side.py  utils.py
wsl2p_remote/resource/: MyFunctions.ps1  conf.ini.example
